<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/col_date_title" />

		<TextView
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/col_heure_title" />
		
        <TextView
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/col_gauche_title" />
        <TextView
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/col_droite_title" />
        <TextView
            android:id="@+id/editText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/col_commencer_title" />
        <TextView
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/col_pipi_title" />
       	<TextView
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/col_caca_title" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.53"
        android:scrollbars="vertical" />
    
<!--     <TableLayout -->
<!--         android:id="@+id/table" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_weight="0.67" -->
<!--         android:scrollbars="vertical" /> -->
    
    <Button
        android:id="@+id/btn_dette"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dette" />

    <Button
        android:id="@+id/btn_quitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_quitter" />

</LinearLayout>
